    REQUEST_RECONFIGURE RPC handler.
 -- Fixed the behavior of the --states=all option in squeue to actually show
    all of the states.
 -- job_container - Don't constrain a job using --no-allocate.
 -- Fix slurmctld segfault when a step requests a gres without a file.
 -- Fix slurmctld segfault when cleaning up an overlapping step.
 -- Dynamic node fixes and updates.

* Changes in Slurm 22.05.0rc1
=============================
 -- gres/gpu - Avoid stripping GRES type field during normalization if any
    other GRES have a defined type field.
 -- burst_buffer/datawarp - free bb_job after stage-out or teardown are done.
 -- acct_gather_energy_rsmi has been renamed acct_gather_energy_gpu.
 -- Remove support for (non-functional) --cpu-bind=boards.
 -- accounting_storage/mysql - ensure new non-HetJobs have het_job_offset NO_VAL
    in the database and fix the same field when retrieving older bad records.
 -- PreemptMode now works as a condition for qos in sacctmgr.
 -- scancel - add "--me" option.
 -- gres/gpu - Fix configured/system-detected GRES match for some combinations
    for which the sorting affected the expected selection result.
 -- openapi/v0.0.38 - Fork existing openapi/v0.0.37 plugin.
 -- openapi/dbv0.0.38 - Fork existing openapi/dbv0.0.37 plugin.
 -- openapi/v0.0.35 - Plugin has been removed.
 -- scrontab - Don't accept extra letters after a '@' repeating pattern.
 -- openapi/dbv0.0.38 - Add missing method POST for /associations/.
 -- Make DefMemPerCPU/MaxMemPerCPU and DefMemPerNode/MaxMemPerNode precedence
    at the global level the same as in partition level, and print an error
    if both of a pair are set.
 -- openapi/v0.0.38 - Allow strings for JobIds instead of only numerical JobIds
    for GET, DELETE, and POST job methods.
 -- openapi/v0.0.38 - enable job priority field for job submissions and updates.
 -- openapi/v0.0.38 - request node states query includes MIXED state instead of
    only allocated.